tdf#121784 DOCX import: fix change tracking of footnotes

and endnotes by creating redline data for their anchors, too.

Now footnote/endnote insertions are visible, and it's possible
to reject them.

Change-Id: I5cd3300c0d423b8c6803b7aeb848dcc103c3b565
Reviewed-on: https://gerrit.libreoffice.org/72680
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>